add to cart added in front-end

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@ Template Name     : Mr. Burger - Real-time burger
 File Description  : Main css file of the template
 Author            : Bidhan Dev
 Support           : bidhan.d@gmail.com
-MIT license       :
+MIT license       : https://github.com/bidhandev/Mr.-Burger/blob/main/LICENSE
 */
 
 /* -------------------------------------------------------------------------
