--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -14,65 +14,8 @@
                                 <th scope="col">Total</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <div class="products">
-                                        <img src="/img/popularBurger/card/img-1.png" alt="">
-                                        <h6>French Sarathyy</h6>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="quantity mt-27">
-                                        <span class="minus_btn"><i class='bx bx-minus'></i></span>
-                                        <span class="quantity_count">2</span>
-                                        <span class="plus_btn"><i class='bx bx-plus'></i></span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="mt-27 price">
-                                        <em>BTD</em> <span>319</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="mt-27 price total_price">
-                                        <div>
-                                            <em>BTD</em>
-                                            <span>319</span>
-                                        </div>
-                                        <i class='bx bx-x'></i>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <div class="products">
-                                        <img src="/img/popularBurger/card/img-2.png" alt="">
-                                        <h6>French Sarathyy</h6>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="quantity mt-27">
-                                        <span class="minus_btn"><i class='bx bx-minus'></i></span>
-                                        <span class="quantity_count">2</span>
-                                        <span class="plus_btn"><i class='bx bx-plus'></i></span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="mt-27 price">
-                                        <em>BTD</em> <span>230</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="mt-27 price total_price">
-                                        <div>
-                                            <em>BTD</em>
-                                            <span>230</span>
-                                        </div>
-                                        <i class='bx bx-x'></i>
-                                    </div>
-                                </td>
-                            </tr>
+
+                        <tbody id="orderTableBody" class="cart__items">
                         </tbody>
                     </table>
                 </div>
@@ -81,10 +24,28 @@
                         <h6 class="title">Order summary</h6>
                         <div class="cart_price">
                             <ul>
-                                <li><span>Subtotal : </span><span> <em>BTD</em> 8766</span></li>
-                                <li><span>Shipping : </span><span> <em>BTD</em> 8766</span></li>
+                                <li>
+                                    <span>Subtotal : </span>
+                                    <span>
+                                        <em>BTD</em>
+                                        <span class="total__cost">0</span>
+                                    </span>
+                                </li>
+                                <li>
+                                    <span>Shipping : </span>
+                                    <span>
+                                        <em>BTD</em>
+                                        <span class="shipping__cost">0</span>
+                                    </span>
+                                </li>
                                 <hr>
-                                <li><span>Total : </span><span> <em>BTD</em> 8766</span></li>
+                                <li>
+                                    <span>Total : </span>
+                                    <span>
+                                        <em>BTD</em>
+                                        <span class="total__price">0</span>
+                                    </span>
+                                </li>
                             </ul>
                         </div>
                         <form action="">
