--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js" data-softskill-page="007e9367e767f981c60fbb99">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+
     <!-- 1. Scroll to top start -->
     <a href="#" class="scrolltop" id="scroll-top">
         <i class='bx bx-chevron-up scrolltop__icon'></i>
@@ -47,7 +48,7 @@
                         <a href="/" class="active-link nav-close">Home</a>
                     </li>
                     <li>
-                        <a href="/menus" class="nav-close">Menus</a>
+                        <a href="/menu" class="nav-close">Menu</a>
                     </li>
                     <li>
                         <a href="/orders" class="nav-close">Orders</a>
@@ -61,7 +62,7 @@
                     <li class="cart_count">
                         <a href="/cart">
                             <i class='bx bx-cart'></i>
-                            <span class="badge badge-pill">12</span>
+                            <span class="badge badge-pill totalQty">0</span>
                         </a>
                     </li>
                 </ul>
