--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,7 +3,7 @@ Template Name     : Mr. Burger - Real-time burger
 File Description  : Main css file of the template
 Author            : Bidhan Dev
 Support           : bidhan.d@gmail.com
-MIT license       :
+MIT license       : https://github.com/bidhandev/Mr.-Burger/blob/main/LICENSE
 */
 
 /* -------------------------------------------------------------------------
