--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1029,6 +1029,27 @@ main.main_cart {
                 }
             }
         }
+
+        // empty cart
+        .empty_cart {
+            text-align: center;
+            width: 100%;
+            margin-top: -30px;
+            img {
+                width: 450px;
+                margin-top: 30px;
+            }
+            a.btn {
+                display: block;
+                background-color: $primary;
+                width: 9%;
+                margin: auto;
+                margin-top: 40px;
+                color: $pure;
+                border-radius: 10px;
+                font-size: 14px;
+            }
+        }
     }
     /* -------------------------------------------------------------------------
    12. Cart area end 
