--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -3,7 +3,7 @@
     <!-- 12. Cart area start -->
     <section class="cart">
         <div class="container">
-            <div class="row">
+            <div class="row" id="ifEmptyCart">
                 <div class="col-lg-9">
                     <table class="table table-borderless cart_table">
                         <thead>
