--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -48,20 +48,26 @@
                                 </li>
                             </ul>
                         </div>
-                        <form action="">
-                            <div class="input-group mb-3">
-                                <input type="tel" class="form-control" placeholder="Phone number">
-                            </div>
-                            <select class="form-select mb-3">
-                                <option selected>Cash on delivery</option>
-                            </select>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Address">
-                            </div>
-                            <div class="text-right mt-4">
-                                <button type="submit">Order</button>
-                            </div>
-                        </form>
+                        <% if(user){ %>
+                            <form action="">
+                                <div class="input-group mb-3">
+                                    <input type="tel" class="form-control" placeholder="Phone number">
+                                </div>
+                                <select class="form-select mb-3">
+                                    <option selected>Cash on delivery</option>
+                                </select>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" placeholder="Address">
+                                </div>
+                                <div class="text-right mt-4">
+                                    <button type="submit" class="cart_btn">Order</button>
+                                </div>
+                            </form>
+                            <%} else{ %>
+                                <div class="text-right mt-5">
+                                    <a href="/login" class="cart_btn">Login to continue</a>
+                                </div>
+                                <% } %>
                     </div>
                 </div>
             </div>
