--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -49,18 +49,22 @@
                             </ul>
                         </div>
                         <% if(user){ %>
-                            <form action="">
+                            <form>
+                                <input type="hidden" name="orderCart" id="sendCart">
                                 <div class="input-group mb-3">
-                                    <input type="tel" class="form-control" placeholder="Phone number">
+                                    <input id="orderPlacedPhone" name="phone" type="tel" class="form-control"
+                                        placeholder="Phone number">
                                 </div>
-                                <select class="form-select mb-3">
-                                    <option selected>Cash on delivery</option>
+                                <select id="orderPlacedPaymentType" name="paymentType" class="form-select mb-3">
+                                    <option selected>Payment type</option>
+                                    <option value="cash-on">Cash on delivery</option>
                                 </select>
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="Address">
+                                    <input id="orderPlacedAddress" name="address" type="text" class="form-control"
+                                        placeholder="Address">
                                 </div>
                                 <div class="text-right mt-4">
-                                    <button type="submit" class="cart_btn">Order</button>
+                                    <button type="submit" class="cart_btn" id="orderPlacedBtn">Order</button>
                                 </div>
                             </form>
                             <%} else{ %>
