--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -49,29 +49,35 @@
                             </ul>
                         </div>
                         <% if(user){ %>
-                            <form>
-                                <input type="hidden" name="orderCart" id="sendCart">
-                                <div class="input-group mb-3">
-                                    <input id="orderPlacedPhone" name="phone" type="tel" class="form-control"
-                                        placeholder="Phone number">
-                                </div>
-                                <select id="orderPlacedPaymentType" name="paymentType" class="form-select mb-3">
-                                    <option selected>Payment type</option>
-                                    <option value="cash-on">Cash on delivery</option>
-                                </select>
-                                <div class="input-group mb-3">
-                                    <input id="orderPlacedAddress" name="address" type="text" class="form-control"
-                                        placeholder="Address">
-                                </div>
-                                <div class="text-right mt-4">
-                                    <button type="submit" class="cart_btn" id="orderPlacedBtn">Order</button>
-                                </div>
-                            </form>
-                            <%} else{ %>
-                                <div class="text-right mt-5">
-                                    <a href="/login" class="cart_btn">Login to continue</a>
-                                </div>
+                            <% if(messages.error){ %>
+                                <p class="text-center text-danger mt-3">
+                                    <small>
+                                        <%= messages.error %>
+                                    </small>
+                                </p>
                                 <% } %>
+                                    <form>
+                                        <div class="input-group mb-3">
+                                            <input id="orderPlacedPhone" name="phone" type="tel" class="form-control"
+                                                placeholder="Phone number">
+                                        </div>
+                                        <select id="orderPlacedPaymentType" name="paymentType" class="form-select mb-3">
+                                            <option selected>Payment type</option>
+                                            <option value="cash-on">Cash on delivery</option>
+                                        </select>
+                                        <div class="input-group mb-3">
+                                            <input id="orderPlacedAddress" name="address" type="text"
+                                                class="form-control" placeholder="Address">
+                                        </div>
+                                        <div class="text-right mt-4">
+                                            <button type="submit" class="cart_btn" id="orderPlacedBtn">Order</button>
+                                        </div>
+                                    </form>
+                                    <%} else{ %>
+                                        <div class="text-right mt-5">
+                                            <a href="/login" class="cart_btn">Login to continue</a>
+                                        </div>
+                                        <% } %>
                     </div>
                 </div>
             </div>
