--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -14,9 +14,7 @@
                                 <th scope="col">Total</th>
                             </tr>
                         </thead>
-
-                        <tbody id="orderTableBody" class="cart__items">
-                        </tbody>
+                        <tbody id="orderTableBody" class="cart__items"></tbody>
                     </table>
                 </div>
                 <div class="col-lg-3">
