--- a/public/css/app.css
+++ b/public/css/app.css
@@ -833,6 +833,26 @@ main.main_order section.orders .orders_table .order_complete a.order_id {
   text-decoration: line-through !important;
 }
 
+main.main_order section.orders .admin_order_table .order_id {
+  font-weight: 500;
+  color: #1b9f76;
+}
+
+main.main_order section.orders .admin_order_table p {
+  line-height: 16px;
+}
+
+main.main_order section.orders .admin_order_table select {
+  width: 100%;
+  padding: 7px;
+  border-radius: 5px;
+}
+
+main.main_order section.orders .admin_order_table .admin_order_form select option[selected] {
+  color: white;
+  background-color: #1b9f76;
+}
+
 main.main_order section.orders .success_alert {
   display: flex;
   color: white;
