--- a/resources/views/customer/cart.ejs
+++ b/resources/views/customer/cart.ejs
@@ -56,16 +56,16 @@
                                 <% } %>
                                     <form>
                                         <div class="input-group mb-3">
-                                            <input id="orderPlacedPhone" name="phone" type="tel" class="form-control"
-                                                placeholder="Phone number">
+                                            <input value="<%= messages.phone %>" id="orderPlacedPhone" name="phone"
+                                                type="tel" class="form-control" placeholder="Phone number">
                                         </div>
                                         <select id="orderPlacedPaymentType" name="paymentType" class="form-select mb-3">
-                                            <option selected>Payment type</option>
+                                            <option selected>Select payment type</option>
                                             <option value="cash-on">Cash on delivery</option>
                                         </select>
                                         <div class="input-group mb-3">
-                                            <input id="orderPlacedAddress" name="address" type="text"
-                                                class="form-control" placeholder="Address">
+                                            <input value="<%= messages.address %>" id="orderPlacedAddress"
+                                                name="address" type="text" class="form-control" placeholder="Address">
                                         </div>
                                         <div class="text-right mt-4">
                                             <button type="submit" class="cart_btn" id="orderPlacedBtn">Order</button>
